Bug#21567: mysqld doesn't react to Ctrl-C when run under GDB even with the --gdb option

Don't block SIGINT (Control-C) when --gdb is passed to mysqld.
Was broken at least on OS X.

(kudos to Mattias Jonsson)